--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.env
+.cursor/mcp.json
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -61,3 +64,7 @@ node_modules/
 # Task files
 tasks.json
 tasks/ 
+
+# Cursor
+.cursor.env
+.cursor/mcp.json
