--- a/env.local.example
+++ b/env.local.example
@@ -1,3 +1,6 @@
 # Este es un ejemplo de archivo .env.local que deberías crear para configurar la variable NEXT_PUBLIC_API_URL
 
 NEXT_PUBLIC_API_URL=http://localhost:3001/api
+
+# Clave API de OpenAI (reemplazar con tu clave real en .env.local)
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
